-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 13
-
Component/s: hotspot
-
b21
* For target hotspot_variant-server_libjvm_objs_shenandoahVerifier.o:
/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp: In member function 'void ShenandoahVerifyNoForwared::do_oop_work(T*)':
/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp:930:45: error: 'get_raw_unchecked' is not a member of 'ShenandoahForwarding'
oop fwd = (oop) ShenandoahForwarding::get_raw_unchecked(obj);
^~~~~~~~~~~~~~~~~
/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp: In member function 'void ShenandoahVerifyNoForwared::do_oop_work(T*)':
/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp:930:45: error: 'get_raw_unchecked' is not a member of 'ShenandoahForwarding'
oop fwd = (oop) ShenandoahForwarding::get_raw_unchecked(obj);
^~~~~~~~~~~~~~~~~
- relates to
-
JDK-8223567 Rename ShenandoahBrooksPointer to ShenandoahForwarding
-
- Resolved
-